FIxed figure font on mobile, h1 margins adjusted, phs-ns

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -38,7 +38,7 @@ figure {
 }
 
 .flex-column h1 {
-    /*margin: 0px;*/
+    margin: 0px;
 }
 
 
